# QtQmlBaseApp

./: .gitignore  CMakeLists.txt  resources.qrc
qml/: Main.qml
qml/components/: ColorPicker.qml  CustomDialog.qml  PreferencesDialog.qml  PropertyEditor.qml  SliderField.qml  ThemeEditor.qml  ValueBar.qml
qml/components/common/: CustomButton.qml  CustomDialog.qml  MenuBar.qml  ScrollableContentArea.qml  ShortcutDialog.qml
qml/components/inputs/: NumberField.qml  SegmentedButton.qml  SliderField.qml
qml/components/pickers/: ColorPicker.qml  ColorWheel.qml  CustomColorPicker.qml  ValueBar.qml
qml/components/preferences/: PreferencesSidebarButton.qml  PreferencesWindow.qml
qml/components/preferences/editors/: PropertyEditor.qml  PropertyGroup.qml
qml/components/preferences/pages/: PreferencesPage.qml  ThemeEditorPage.qml  ThemePreviewPage.qml  ThemeSelectorPage.qml
qml/components/preferences/preferencesTabs/: ComponentsLib.qml  Interface.qml  Keymaps.qml  PropertyEditor.qml  ThemeEditor.qml  ThemeSelector.qml
qml/components/presentation/: ComponentSection.qml  ComponentSubSection.qml
qml/views/: MainView.qml
resources/themes/: arctic.json  blue.json  dark.json  default.json  grey.json  light.json  muted_green.json  sepia.json  snow.json
src/: main.cpp
src/core/: Application.cpp  Application.h  KeymapManager.cpp  KeymapManager.h  PreferencesManager.cpp  PreferencesManager.h  SettingsManager.cpp  SettingsManager.h  ThemeManager.cpp  ThemeManager.h
src/core/theme/: ComponentOverrides.cpp  ComponentOverrides.h  ThemeAtoms.cpp  ThemeAtoms.h  ThemeMolecules.cpp  ThemeMolecules.h  ThemePresets.h
src/core/theme/base/: ColorState.cpp  ColorState.h  SimpleColorState.cpp  SimpleColorState.h  SizeValue.cpp  SizeValue.h  ThemeBorder.cpp  ThemeBorder.h  ThemeColors.cpp  ThemeColors.h  ThemeFont.cpp  ThemeFont.h  ThemeSize.cpp  ThemeSize.h  ThemeSpacing.cpp  ThemeSpacing.h  ThemeTransition.cpp  ThemeTransition.h
src/core/theme/common/: ThemePalette.cpp  ThemePalette.h  ThemeSizes.cpp  ThemeSizes.h
src/core/theme/components/: ButtonTheme.cpp  ButtonTheme.h  ComponentStyles.cpp  ComponentStyles.h  MenuBarTheme.cpp  MenuBarTheme.h  PreferencesWindowTheme.cpp  PreferencesWindowTheme.h  ThemeComponents.cpp  ThemeComponents.h
src/core/theme/presets/: ThemePreset.cpp  ThemePreset.h
src/models/: ThemePropertyModel.cpp  ThemePropertyModel.h  TimeModel.cpp  TimeModel.h
